# GaborSplatting

./: README.md  conda_env.yml  pyproject.toml  requirements-uv.txt  train.py
CUDA_modules/PeriodicPrimitivesCUDA/: setup.py
models/: PeriodicPrimitives2D.py  models.py
scripts/: install_periodic_primitives.sh
